// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Edit Processor Form should render correctly when no props provided 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditProcessor />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <React.Fragment>
        <TextInput
          field="name"
          label="Processor name"
          placeholder="Processor name"
          required={true}
          type="text"
        />
        <label
          htmlFor="description"
        >
          Description:
        </label>
        <ConnectedField
          field="description"
          id="description"
        />
        <TextInput
          field="logoUrl"
          label="Logo URL"
          placeholder="Processor Logo (URL)"
          required={true}
          type="url"
        />
        <label>
          Scopes:
        </label>
        <label>
          <ConnectedField
            field="scopes[user:fullName]"
          />
          user:fullName
        </label>
        <label>
          <ConnectedField
            field="scopes[user:email]"
          />
          user:email
        </label>
        <label>
          <ConnectedField
            field="scopes[user:phoneNumber]"
          />
          user:phoneNumber
        </label>
        <button
          className="btn ui-action"
          type="submit"
        >
          Submit
        </button>
      </React.Fragment>,
      "onSubmit": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TextInput
            field="name"
            label="Processor name"
            placeholder="Processor name"
            required={true}
            type="text"
          />,
          <label
            htmlFor="description"
          >
            Description:
          </label>,
          <ConnectedField
            field="description"
            id="description"
          />,
          <TextInput
            field="logoUrl"
            label="Logo URL"
            placeholder="Processor Logo (URL)"
            required={true}
            type="url"
          />,
          <label>
            Scopes:
          </label>,
          Array [
            <label>
              <ConnectedField
                field="scopes[user:fullName]"
              />
              user:fullName
            </label>,
            <label>
              <ConnectedField
                field="scopes[user:email]"
              />
              user:email
            </label>,
            <label>
              <ConnectedField
                field="scopes[user:phoneNumber]"
              />
              user:phoneNumber
            </label>,
          ],
          <button
            className="btn ui-action"
            type="submit"
          >
            Submit
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "name",
            "label": "Processor name",
            "placeholder": "Processor name",
            "required": true,
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Description:",
            "htmlFor": "description",
          },
          "ref": null,
          "rendered": "Description:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "field": "description",
            "id": "description",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "logoUrl",
            "label": "Logo URL",
            "placeholder": "Processor Logo (URL)",
            "required": true,
            "type": "url",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Scopes:",
          },
          "ref": null,
          "rendered": "Scopes:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ConnectedField
                field="scopes[user:fullName]"
              />,
              "user:fullName",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "field": "scopes[user:fullName]",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "user:fullName",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ConnectedField
                field="scopes[user:email]"
              />,
              "user:email",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "field": "scopes[user:email]",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "user:email",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ConnectedField
                field="scopes[user:phoneNumber]"
              />,
              "user:phoneNumber",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "field": "scopes[user:phoneNumber]",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "user:phoneNumber",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Submit",
            "className": "btn ui-action",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Submit",
          "type": "button",
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <React.Fragment>
          <TextInput
            field="name"
            label="Processor name"
            placeholder="Processor name"
            required={true}
            type="text"
          />
          <label
            htmlFor="description"
          >
            Description:
          </label>
          <ConnectedField
            field="description"
            id="description"
          />
          <TextInput
            field="logoUrl"
            label="Logo URL"
            placeholder="Processor Logo (URL)"
            required={true}
            type="url"
          />
          <label>
            Scopes:
          </label>
          <label>
            <ConnectedField
              field="scopes[user:fullName]"
            />
            user:fullName
          </label>
          <label>
            <ConnectedField
              field="scopes[user:email]"
            />
            user:email
          </label>
          <label>
            <ConnectedField
              field="scopes[user:phoneNumber]"
            />
            user:phoneNumber
          </label>
          <button
            className="btn ui-action"
            type="submit"
          >
            Submit
          </button>
        </React.Fragment>,
        "onSubmit": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <TextInput
              field="name"
              label="Processor name"
              placeholder="Processor name"
              required={true}
              type="text"
            />,
            <label
              htmlFor="description"
            >
              Description:
            </label>,
            <ConnectedField
              field="description"
              id="description"
            />,
            <TextInput
              field="logoUrl"
              label="Logo URL"
              placeholder="Processor Logo (URL)"
              required={true}
              type="url"
            />,
            <label>
              Scopes:
            </label>,
            Array [
              <label>
                <ConnectedField
                  field="scopes[user:fullName]"
                />
                user:fullName
              </label>,
              <label>
                <ConnectedField
                  field="scopes[user:email]"
                />
                user:email
              </label>,
              <label>
                <ConnectedField
                  field="scopes[user:phoneNumber]"
                />
                user:phoneNumber
              </label>,
            ],
            <button
              className="btn ui-action"
              type="submit"
            >
              Submit
            </button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": undefined,
              "field": "name",
              "label": "Processor name",
              "placeholder": "Processor name",
              "required": true,
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Description:",
              "htmlFor": "description",
            },
            "ref": null,
            "rendered": "Description:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "field": "description",
              "id": "description",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": undefined,
              "field": "logoUrl",
              "label": "Logo URL",
              "placeholder": "Processor Logo (URL)",
              "required": true,
              "type": "url",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Scopes:",
            },
            "ref": null,
            "rendered": "Scopes:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ConnectedField
                  field="scopes[user:fullName]"
                />,
                "user:fullName",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "field": "scopes[user:fullName]",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "user:fullName",
            ],
            "type": "label",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ConnectedField
                  field="scopes[user:email]"
                />,
                "user:email",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "field": "scopes[user:email]",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "user:email",
            ],
            "type": "label",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ConnectedField
                  field="scopes[user:phoneNumber]"
                />,
                "user:phoneNumber",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "field": "scopes[user:phoneNumber]",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "user:phoneNumber",
            ],
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Submit",
              "className": "btn ui-action",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Submit",
            "type": "button",
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`(Component) Edit Processor Form should render correctly when the prop isLoading is set to false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditProcessor
    isLoading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <React.Fragment>
        <TextInput
          field="name"
          label="Processor name"
          placeholder="Processor name"
          required={true}
          type="text"
        />
        <label
          htmlFor="description"
        >
          Description:
        </label>
        <ConnectedField
          field="description"
          id="description"
        />
        <TextInput
          field="logoUrl"
          label="Logo URL"
          placeholder="Processor Logo (URL)"
          required={true}
          type="url"
        />
        <label>
          Scopes:
        </label>
        <label>
          <ConnectedField
            field="scopes[user:fullName]"
          />
          user:fullName
        </label>
        <label>
          <ConnectedField
            field="scopes[user:email]"
          />
          user:email
        </label>
        <label>
          <ConnectedField
            field="scopes[user:phoneNumber]"
          />
          user:phoneNumber
        </label>
        <button
          className="btn ui-action"
          type="submit"
        >
          Submit
        </button>
      </React.Fragment>,
      "onSubmit": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TextInput
            field="name"
            label="Processor name"
            placeholder="Processor name"
            required={true}
            type="text"
          />,
          <label
            htmlFor="description"
          >
            Description:
          </label>,
          <ConnectedField
            field="description"
            id="description"
          />,
          <TextInput
            field="logoUrl"
            label="Logo URL"
            placeholder="Processor Logo (URL)"
            required={true}
            type="url"
          />,
          <label>
            Scopes:
          </label>,
          Array [
            <label>
              <ConnectedField
                field="scopes[user:fullName]"
              />
              user:fullName
            </label>,
            <label>
              <ConnectedField
                field="scopes[user:email]"
              />
              user:email
            </label>,
            <label>
              <ConnectedField
                field="scopes[user:phoneNumber]"
              />
              user:phoneNumber
            </label>,
          ],
          <button
            className="btn ui-action"
            type="submit"
          >
            Submit
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "name",
            "label": "Processor name",
            "placeholder": "Processor name",
            "required": true,
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Description:",
            "htmlFor": "description",
          },
          "ref": null,
          "rendered": "Description:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "field": "description",
            "id": "description",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "error": undefined,
            "field": "logoUrl",
            "label": "Logo URL",
            "placeholder": "Processor Logo (URL)",
            "required": true,
            "type": "url",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Scopes:",
          },
          "ref": null,
          "rendered": "Scopes:",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ConnectedField
                field="scopes[user:fullName]"
              />,
              "user:fullName",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "field": "scopes[user:fullName]",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "user:fullName",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ConnectedField
                field="scopes[user:email]"
              />,
              "user:email",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "field": "scopes[user:email]",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "user:email",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ConnectedField
                field="scopes[user:phoneNumber]"
              />,
              "user:phoneNumber",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "field": "scopes[user:phoneNumber]",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "user:phoneNumber",
          ],
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Submit",
            "className": "btn ui-action",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Submit",
          "type": "button",
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <React.Fragment>
          <TextInput
            field="name"
            label="Processor name"
            placeholder="Processor name"
            required={true}
            type="text"
          />
          <label
            htmlFor="description"
          >
            Description:
          </label>
          <ConnectedField
            field="description"
            id="description"
          />
          <TextInput
            field="logoUrl"
            label="Logo URL"
            placeholder="Processor Logo (URL)"
            required={true}
            type="url"
          />
          <label>
            Scopes:
          </label>
          <label>
            <ConnectedField
              field="scopes[user:fullName]"
            />
            user:fullName
          </label>
          <label>
            <ConnectedField
              field="scopes[user:email]"
            />
            user:email
          </label>
          <label>
            <ConnectedField
              field="scopes[user:phoneNumber]"
            />
            user:phoneNumber
          </label>
          <button
            className="btn ui-action"
            type="submit"
          >
            Submit
          </button>
        </React.Fragment>,
        "onSubmit": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <TextInput
              field="name"
              label="Processor name"
              placeholder="Processor name"
              required={true}
              type="text"
            />,
            <label
              htmlFor="description"
            >
              Description:
            </label>,
            <ConnectedField
              field="description"
              id="description"
            />,
            <TextInput
              field="logoUrl"
              label="Logo URL"
              placeholder="Processor Logo (URL)"
              required={true}
              type="url"
            />,
            <label>
              Scopes:
            </label>,
            Array [
              <label>
                <ConnectedField
                  field="scopes[user:fullName]"
                />
                user:fullName
              </label>,
              <label>
                <ConnectedField
                  field="scopes[user:email]"
                />
                user:email
              </label>,
              <label>
                <ConnectedField
                  field="scopes[user:phoneNumber]"
                />
                user:phoneNumber
              </label>,
            ],
            <button
              className="btn ui-action"
              type="submit"
            >
              Submit
            </button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": undefined,
              "field": "name",
              "label": "Processor name",
              "placeholder": "Processor name",
              "required": true,
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Description:",
              "htmlFor": "description",
            },
            "ref": null,
            "rendered": "Description:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "field": "description",
              "id": "description",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "error": undefined,
              "field": "logoUrl",
              "label": "Logo URL",
              "placeholder": "Processor Logo (URL)",
              "required": true,
              "type": "url",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Scopes:",
            },
            "ref": null,
            "rendered": "Scopes:",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ConnectedField
                  field="scopes[user:fullName]"
                />,
                "user:fullName",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "field": "scopes[user:fullName]",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "user:fullName",
            ],
            "type": "label",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ConnectedField
                  field="scopes[user:email]"
                />,
                "user:email",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "field": "scopes[user:email]",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "user:email",
            ],
            "type": "label",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ConnectedField
                  field="scopes[user:phoneNumber]"
                />,
                "user:phoneNumber",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "field": "scopes[user:phoneNumber]",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "user:phoneNumber",
            ],
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Submit",
              "className": "btn ui-action",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Submit",
            "type": "button",
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`(Component) Edit Processor Form should render correctly when the prop isLoading is set to true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditProcessor
    isLoading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Loader />,
      "onSubmit": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Loader />,
        "onSubmit": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
